--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     // Glide
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:23.4.0'
+
+    // Circle Image View
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
