--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
 
     // Circle ImageView
     compile 'de.hdodenhof:circleimageview:1.3.0'
+
+    // Design
+    compile 'com.android.support:design:23.4.0'
+
 }
