--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,25 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".onsale.OnSaleActivity"
+        <activity android:name=".MainActivity"></activity>
+
+        <!--Navigation Drawer Activity-->
+        <activity android:name=".navigation_drawer.BaseActivity"></activity>
+
+        <!--On Sale Activity-->
+        <activity
+            android:name=".onsale.OnSaleActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".navigation_drawer.BaseActivity">
-        </activity>
+
     </application>
 
 </manifest>
