--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,9 @@ dependencies {
     // Design
     compile 'com.android.support:design:23.4.0'
 
+    // Auth0
+    compile 'com.auth0.android:lock:1.14.1'
+    compile 'com.auth0.android:lock-facebook:2.4.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+
 }
