--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,10 @@ dependencies {
     // Glide
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:23.4.0'
+    //
+    compile 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+    ///
+    compile 'com.github.traex.rippleeffect:library:1.3'
+
+
 }
