--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!-- Splash screen -->
-        <activity
+       <!-- <activity
             android:name=".splash.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> !-->
+        <activity
+            android:name=".checkout.CheckoutActivity">
+                       <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
