--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        
+        <activity android:name=".MainActivity">
+
+        </activity>
 
         <!-- Navigation Drawer Activity -->
-        <activity android:name=".navigation_drawer.BaseActivity" />
+        <activity android:name=".navigation_drawer.BaseActivity">
+
+        </activity>
 
         <!-- On Sale Activity -->
         <activity
@@ -41,7 +46,9 @@
         </activity>
 
         <!-- Login Activity -->
-        <activity android:name=".login.LoginActivity"></activity>
+        <activity android:name=".login.LoginActivity">
+
+        </activity>
 
         <!-- Auth0 Lock -->
         <activity
@@ -83,7 +90,9 @@
             android:value="@string/facebook_app_id" />
         <!-- Facebook Native End -->
 
-        <activity android:name=".login.SignUpActivity"></activity>
+        <activity android:name=".login.SignUpActivity">
+
+        </activity>
     </application>
 
 </manifest>
