--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     compile 'com.auth0.android:lock-facebook:2.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 
+    //EventBus
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
