--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
 
         <activity android:name=".login.SignUpActivity"></activity>
         <activity android:name=".settings.SettingsActivity"></activity>
+        <activity android:name=".checkout.CheckoutActivity"></activity>
     </application>
 
 </manifest>
